--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>DEV 101</h1>
+        <h1>DEV 101 @Devesh</h1>
         <nav>
             <ul>
                 <li><a href="#1">HTML5</a></li>
