--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>DEV 101 @Devesh</h1>
+        <h1> Graphic Era </h1>
         <nav>
             <ul>
                 <li><a href="#1">HTML5</a></li>
@@ -44,7 +44,7 @@
     </main>
     
     <footer class="footer_parent"> 
-        <div class="footer_content">&#169; Devesh 2k22</div> 
+        <div class="footer_content">&#169; Graphic Era 2k22</div> 
     </footer>
 </body>
 
